force-app/main/default/objects/Contact/fields/AfolType__c.field-meta.xml
<CustomField>
    <fullName>AfolType__c</fullName>
    <label>AfolType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>POSTPAID</fullName>
            </value>
            <value>
                <fullName>B2B2C</fullName>
            </value>
            <value>
                <fullName>PREPAID</fullName>
            </value>
            <value>
                <fullName>DIPLOMAT</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>