force-app/main/default/objects/Contact/fields/B2CCompanyCode__c.field-meta.xml
<CustomField>
    <fullName>B2CCompanyCode__c</fullName>
    <externalId>true</externalId>
    <label>B2CCompanyCode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>