force-app/main/default/objects/Contact/fields/B2CValidationStatus__c.field-meta.xml
<CustomField>
    <fullName>B2CValidationStatus__c</fullName>
    <label>B2CValidationStatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>