force-app/main/default/objects/Contact/fields/ContinuationCode__c.field-meta.xml
<CustomField>
    <fullName>ContinuationCode__c</fullName>
    <label>ContinuationCode</label>
    <length>100</length>
    <type>Text</type>
</CustomField>