force-app/main/default/objects/Contact/fields/IsAskingRecall__c.field-meta.xml
<CustomField>
    <fullName>IsAskingRecall__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Did customer asked to be recontacted for help?</description>
    <label>IsAskingRecall</label>
    <type>Checkbox</type>
</CustomField>