force-app/main/default/objects/Contact/fields/IsOptOut__c.field-meta.xml
<CustomField>
    <fullName>IsOptOut__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has opted out from advertising emails</description>
    <label>IsOptOut</label>
    <type>Checkbox</type>
</CustomField>