force-app/main/default/objects/Contact/fields/IsSavedForLater__c.field-meta.xml
<CustomField>
    <fullName>IsSavedForLater__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Did the subscriber chose to save the session?</description>
    <label>IsSavedForLater</label>
    <type>Checkbox</type>
</CustomField>