force-app/main/default/objects/Contact/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>fr_FR</fullName>
            </value>
            <value>
                <fullName>de_DE</fullName>
            </value>
            <value>
                <fullName>en_GB</fullName>
            </value>
            <value>
                <fullName>nl_NL</fullName>
            </value>
            <value>
                <fullName>nl_BE</fullName>
            </value>
            <value>
                <fullName>de_LU</fullName>
            </value>
            <value>
                <fullName>fr_BE</fullName>
            </value>
            <value>
                <fullName>fr_LU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>