force-app/main/default/objects/Contact/fields/LastStep__c.field-meta.xml
<CustomField>
    <fullName>LastStep__c</fullName>
    <label>LastStep</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>