force-app/main/default/objects/Contact/fields/LeadId__c.field-meta.xml
<CustomField>
    <fullName>LeadId__c</fullName>
    <externalId>true</externalId>
    <label>LeadId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>