force-app/main/default/objects/Contact/fields/Referrer__c.field-meta.xml
<CustomField>
    <fullName>Referrer__c</fullName>
    <description>Where did you knew about Total cards?</description>
    <label>Referrer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tbd</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
            <value>
                <fullName>Seo</fullName>
            </value>
            <value>
                <fullName>Gas Station</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>