force-app/main/default/objects/Contact/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>Contact&#39;s role in company</description>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DECI</fullName>
            </value>
            <value>
                <fullName>RCTA</fullName>
            </value>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>AUT</fullName>
            </value>
            <value>
                <fullName>ASS</fullName>
            </value>
            <value>
                <fullName>CG</fullName>
            </value>
            <value>
                <fullName>CHF</fullName>
            </value>
            <value>
                <fullName>DAF</fullName>
            </value>
            <value>
                <fullName>DC</fullName>
            </value>
            <value>
                <fullName>DG</fullName>
            </value>
            <value>
                <fullName>DIR</fullName>
            </value>
            <value>
                <fullName>DM</fullName>
            </value>
            <value>
                <fullName>DRH</fullName>
            </value>
            <value>
                <fullName>GTPC</fullName>
            </value>
            <value>
                <fullName>RHA</fullName>
            </value>
            <value>
                <fullName>RINF</fullName>
            </value>
            <value>
                <fullName>RLOG</fullName>
            </value>
            <value>
                <fullName>RMAT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>