force-app/main/default/objects/Contact/fields/StationReferrer__c.field-meta.xml
<CustomField>
    <fullName>StationReferrer__c</fullName>
    <description>Which gas station referred the subscriber</description>
    <label>StationReferrer</label>
    <length>130</length>
    <type>Text</type>
</CustomField>